--- a/lib-fontawesome/src/main/res/values/_version.xml
+++ b/lib-fontawesome/src/main/res/values/_version.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="_fa_version_of_text">v5</string>
-    <string name="_fa_version_of_font">6.4.0</string>
+    <string name="_fa_version">6.5.2</string>
 </resources>
