--- a/app/src/main/res/layout/demo_page.xml
+++ b/app/src/main/res/layout/demo_page.xml
@@ -13,7 +13,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/fa_regular"
         android:text="@string/fa_user"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/fa_solid"
         android:text="@string/fa_user"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <TextView
@@ -31,8 +31,8 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/fa_solid"
         android:text="@string/fa_user"
-        android:textColor="@android:color/black"
-        android:textSize="20dp"
+        android:textColor="?colorAccent"
+        android:textSize="20sp"
         />
 
 </LinearLayout>
